--- a/todo-list/main.html
+++ b/todo-list/main.html
@@ -4,22 +4,60 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+            <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+  </head>
+  <body>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    -->
+        <link rel="stylesheet" href="./main.css"/>
+        <link href="link rel="preconnect href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Moirai+One&display=swap" rel="stylesheet">"
     </head>
-    <body>
-        <h1>투두리스트</h1>
-        <h2>투두리스트</h2>
-        <h6>투두리스트</h6>
-        <div>영역</div>
-        <br/><br/>
-        <div>영역2</div>
-        <p>긴~ 문장을 쓸 때</p>
-        <p>긴~ <span style="color:red">문장</span>을 쓸 때</p>
-        <ul>
-            <li>1</li>
-            <li>2</li>
-        </ul>
-        <input type="text"/>
-        <input type="number" />
-        <button>버튼</button>
+    <body> 
+        <div class="container" id="container">
+            <h3 id="title">정말 간단 TODO 리스트</h3>
+            <div id="sub-container">
+                <ul class="list-group" id="list-group">
+                    <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+                      오늘의 할 일 목록 하나!
+                      <span class="badge badge-primary badge-pill">삭제</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+                        오늘의 할 일 목록 하나!
+                        <span class="badge badge-primary badge-pill">삭제</span>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+                        오늘의 할 일 목록 하나!
+                        <span class="badge badge-primary badge-pill">삭제</span>
+                      </li>
+
+                  </ul>
+            </div>
+            <div class="input-group mb-3" id="input-group">
+                <input type="text" class="form-control" id="input-area">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" id="button-area">Button</button>
+                </div>
+              </div>
+
+        </div>
+        
+
+        
+
     </body>
 </html>
